--- a/index.html
+++ b/index.html
@@ -29,13 +29,6 @@
     <div id="root" />
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script>
-      const dataLoaded = setInterval(function () {
-        if (window.data && window.nodes && window.data.nodes.length > 0) {
-          clearInterval(dataLoaded);
-          main();
-        }
-      }, 300);
-
       function main() {
         const data = window.data;
 
@@ -68,9 +61,9 @@
 
           return d3
             .drag()
-            .on('start', dragstarted)
-            .on('drag', dragged)
-            .on('end', dragended);
+            .on("start", dragstarted)
+            .on("drag", dragged)
+            .on("end", dragended);
         };
 
         const findConnectedNodes = (id, curNodes) => {
@@ -83,7 +76,7 @@
             .map((l) => (l.source === id ? l.target : l.source));
 
           const newNodeIds = linkedNodeIds.filter(
-            (i) => curNodes.indexOf(i) < 0,
+            (i) => curNodes.indexOf(i) < 0
           );
           if (newNodeIds.length > 0) {
             newNodeIds.forEach((ni) => {
@@ -96,68 +89,67 @@
         const chart = () => {
           const links = data.links.map((d) => Object.create(d));
           const nodes = data.nodes.map((d) => Object.create(d));
-          const fcolor = window.fcolor || '#4e79a7';
+          const fcolor = window.fcolor || "#4e79a7";
           const simulation = d3
             .forceSimulation(nodes)
             .force(
-              'link',
+              "link",
               d3
                 .forceLink(links)
                 .id((d) => d.id)
-                .distance(100),
+                .distance(100)
             )
-            .force('charge', d3.forceManyBody().strength(-100))
-            .force('x', d3.forceX())
-            .force('y', d3.forceY());
+            .force("charge", d3.forceManyBody().strength(-100))
+            .force("x", d3.forceX())
+            .force("y", d3.forceY());
 
           const svg = d3
-            .create('svg')
-            .attr('viewBox', [-width / 2, -height / 2, width, height]);
+            .create("svg")
+            .attr("viewBox", [-width / 2, -height / 2, width, height]);
 
           //add encompassing group for the zoom
-          var g = svg.append('g').attr('class', 'everything');
+          var g = svg.append("g").attr("class", "everything");
 
           const link = g
-            .append('g')
-            .attr('stroke', fcolor)
-            .attr('stroke-opacity', 0.6)
-            .selectAll('line')
+            .append("g")
+            .attr("stroke", fcolor)
+            .attr("stroke-opacity", 0.6)
+            .selectAll("line")
             .data(links)
-            .join('line')
-            .attr('stroke-width', 1);
+            .join("line")
+            .attr("stroke-width", 1);
 
           const node = g
-            .append('g')
-            .attr('stroke', '#fff')
-            .attr('stroke-width', 2)
-            .selectAll('circle')
+            .append("g")
+            .attr("stroke", "#fff")
+            .attr("stroke-width", 2)
+            .selectAll("circle")
             .data(nodes)
-            .join('circle')
-            .attr('r', 15)
-            .attr('fill', (d) => (Number.isInteger(d.id) ? fcolor : '#c7bbbb'))
+            .join("circle")
+            .attr("r", 15)
+            .attr("fill", (d) => (Number.isInteger(d.id) ? fcolor : "#c7bbbb"))
             .call(drag(simulation));
 
-          var zoom_handler = d3.zoom().on('zoom', zoom_actions);
+          var zoom_handler = d3.zoom().on("zoom", zoom_actions);
           zoom_handler(svg);
 
-          svg.on('click', () => {
-            g.selectAll('circle').classed('selected', false);
-            g.selectAll('circle').classed('current', false);
+          svg.on("click", () => {
+            g.selectAll("circle").classed("selected", false);
+            g.selectAll("circle").classed("current", false);
             window.ReactNativeWebView &&
-              window.ReactNativeWebView.postMessage('');
+              window.ReactNativeWebView.postMessage("");
           });
 
-          node.on('click', function (d) {
+          node.on("click", function (d) {
             const connectedNodes = findConnectedNodes(d.id, []);
-            g.selectAll('circle').classed(
-              'selected',
-              (c) =>
-                Number.isInteger(c.id) && connectedNodes.indexOf(c.id) > -1,
+            g.selectAll("circle").classed(
+              "selected",
+              (c) => Number.isInteger(c.id) && connectedNodes.indexOf(c.id) > -1
             );
-            g.selectAll('circle').classed('current', (c) => c.id === d.id);
+            g.selectAll("circle").classed("current", (c) => c.id === d.id);
 
-            g.selectAll('line').classed(
-              'selected-line',
+            g.selectAll("line").classed(
+              "selected-line",
               (c) => {
                 const lk = data.links[c.index];
                 return (
@@ -165,53 +157,56 @@
                   connectedNodes.indexOf(lk.target) > -1
                 );
               },
-              { passive: true },
+              { passive: true }
             );
             d3.event.stopPropagation();
             window.ReactNativeWebView &&
               window.ReactNativeWebView.postMessage(
                 `${JSON.stringify({
                   id: d.id,
-                  type: '@cases/selected',
+                  type: "@cases/selected",
                   cluster_links: connectedNodes,
-                })}`,
+                })}`
               );
           });
 
           const label = g
-            .append('g')
-            .selectAll('text')
+            .append("g")
+            .selectAll("text")
             .data(nodes)
-            .join('text')
-            .attr('font-size', 12)
-            .attr('fill', '#fff')
-            .attr('pointer-events', 'none')
+            .join("text")
+            .attr("font-size", 12)
+            .attr("fill", "#fff")
+            .attr("pointer-events", "none")
             .text((d) => d.id);
 
-          simulation.on('tick', () => {
+          simulation.on("tick", () => {
             link
-              .attr('x1', (d) => d.source.x)
-              .attr('y1', (d) => d.source.y)
-              .attr('x2', (d) => d.target.x)
-              .attr('y2', (d) => d.target.y);
+              .attr("x1", (d) => d.source.x)
+              .attr("y1", (d) => d.source.y)
+              .attr("x2", (d) => d.target.x)
+              .attr("y2", (d) => d.target.y);
 
-            node.attr('cx', (d) => d.x).attr('cy', (d) => d.y);
+            node.attr("cx", (d) => d.x).attr("cy", (d) => d.y);
 
             label
-              .attr('dx', (d) => d.x - (d.id < 10 ? 3 : 6))
-              .attr('dy', (d) => d.y + 3);
+              .attr("dx", (d) => d.x - (d.id < 10 ? 3 : 6))
+              .attr("dy", (d) => d.y + 3);
           });
 
           function zoom_actions() {
-            g.attr('transform', d3.event.transform);
+            g.attr("transform", d3.event.transform);
           }
           return svg.node();
         };
 
         const svg = chart();
-        document.getElementById('root').append(svg);
+        document.getElementById("root").append(svg);
       }
+
+      window.ReactNativeWebView &&
+        window.ReactNativeWebView.postMessage("ready");
     </script>
-    <span id="version">v4</span>
+    <span id="version">v5</span>
   </body>
 </html>
