--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 
           return d3
             .drag()
-            .on("start", dragstarted)
-            .on("drag", dragged)
-            .on("end", dragended);
+            .on('start', dragstarted)
+            .on('drag', dragged)
+            .on('end', dragended);
         };
 
         const findConnectedNodes = (id, curNodes) => {
@@ -89,69 +89,73 @@
         const chart = () => {
           const links = data.links.map((d) => Object.create(d));
           const nodes = data.nodes.map((d) => Object.create(d));
-          const fcolor = window.fcolor || "#4e79a7";
+          const fcolor = window.fcolor || '#4e79a7';
           const simulation = d3
             .forceSimulation(nodes)
             .force(
-              "link",
+              'link',
               d3
                 .forceLink(links)
                 .id((d) => d.id)
                 .distance(100)
             )
-            .force("charge", d3.forceManyBody().strength(-100))
-            .force("x", d3.forceX())
-            .force("y", d3.forceY());
+            .force('charge', d3.forceManyBody().strength(-100))
+            .force('x', d3.forceX())
+            .force('y', d3.forceY());
 
           const svg = d3
-            .create("svg")
-            .attr("viewBox", [-width / 2, -height / 2, width, height]);
+            .create('svg')
+            .attr('viewBox', [-width / 2, -height / 2, width, height]);
 
           //add encompassing group for the zoom
-          var g = svg.append("g").attr("class", "everything");
+          var g = svg.append('g').attr('class', 'everything');
 
           const link = g
-            .append("g")
-            .attr("stroke", fcolor)
-            .attr("stroke-opacity", 0.6)
-            .selectAll("line")
+            .append('g')
+            .attr('stroke', fcolor)
+            .attr('stroke-opacity', 0.6)
+            .selectAll('line')
             .data(links)
-            .join("line")
-            .attr("stroke-width", 1);
+            .join('line')
+            .attr('stroke-width', 1);
 
           const node = g
-            .append("g")
-            .attr("stroke", "#fff")
-            .attr("stroke-width", 2)
-            .selectAll("circle")
+            .append('g')
+            .attr('stroke', '#fff')
+            .attr('stroke-width', 2)
+            .selectAll('circle')
             .data(nodes)
-            .join("circle")
-            .attr("r", 15)
-            .attr("fill", (d) =>
-              d.imported && d.imported === "Y" ? "#f28e2c" : fcolor
+            .join('circle')
+            .attr('r', 15)
+            .attr('fill', (d) =>
+              d.death_at
+                ? '#d9534f'
+                : d.imported && d.imported === 'Y'
+                ? '#f28e2c'
+                : fcolor
             )
             .call(drag(simulation));
 
-          var zoom_handler = d3.zoom().on("zoom", zoom_actions);
+          var zoom_handler = d3.zoom().on('zoom', zoom_actions);
           zoom_handler(svg);
 
-          svg.on("click", () => {
-            g.selectAll("circle").classed("selected", false);
-            g.selectAll("circle").classed("current", false);
+          svg.on('click', () => {
+            g.selectAll('circle').classed('selected', false);
+            g.selectAll('circle').classed('current', false);
             window.ReactNativeWebView &&
-              window.ReactNativeWebView.postMessage("");
+              window.ReactNativeWebView.postMessage('');
           });
 
-          node.on("click", function (d) {
+          node.on('click', function (d) {
             const connectedNodes = findConnectedNodes(d.id, []);
-            g.selectAll("circle").classed(
-              "selected",
+            g.selectAll('circle').classed(
+              'selected',
               (c) => Number.isInteger(c.id) && connectedNodes.indexOf(c.id) > -1
             );
-            g.selectAll("circle").classed("current", (c) => c.id === d.id);
+            g.selectAll('circle').classed('current', (c) => c.id === d.id);
 
-            g.selectAll("line").classed(
-              "selected-line",
+            g.selectAll('line').classed(
+              'selected-line',
               (c) => {
                 const lk = data.links[c.index];
                 return (
@@ -166,49 +170,49 @@
               window.ReactNativeWebView.postMessage(
                 `${JSON.stringify({
                   id: d.id,
-                  type: "@cases/selected",
+                  type: '@cases/selected',
                   cluster_links: connectedNodes,
                 })}`
               );
           });
 
           const label = g
-            .append("g")
-            .selectAll("text")
+            .append('g')
+            .selectAll('text')
             .data(nodes)
-            .join("text")
-            .attr("font-size", 12)
-            .attr("fill", "#fff")
-            .attr("pointer-events", "none")
+            .join('text')
+            .attr('font-size', 12)
+            .attr('fill', '#fff')
+            .attr('pointer-events', 'none')
             .text((d) => d.id);
 
-          simulation.on("tick", () => {
+          simulation.on('tick', () => {
             link
-              .attr("x1", (d) => d.source.x)
-              .attr("y1", (d) => d.source.y)
-              .attr("x2", (d) => d.target.x)
-              .attr("y2", (d) => d.target.y);
+              .attr('x1', (d) => d.source.x)
+              .attr('y1', (d) => d.source.y)
+              .attr('x2', (d) => d.target.x)
+              .attr('y2', (d) => d.target.y);
 
-            node.attr("cx", (d) => d.x).attr("cy", (d) => d.y);
+            node.attr('cx', (d) => d.x).attr('cy', (d) => d.y);
 
             label
-              .attr("dx", (d) => d.x - (d.id < 10 ? 3 : 6))
-              .attr("dy", (d) => d.y + 3);
+              .attr('dx', (d) => d.x - (d.id < 10 ? 3 : 6))
+              .attr('dy', (d) => d.y + 3);
           });
 
           function zoom_actions() {
-            g.attr("transform", d3.event.transform);
+            g.attr('transform', d3.event.transform);
           }
 
           return svg.node();
         };
 
         const svg = chart();
-        document.getElementById("root").append(svg);
+        document.getElementById('root').append(svg);
       }
 
       window.ReactNativeWebView &&
-        window.ReactNativeWebView.postMessage("ready");
+        window.ReactNativeWebView.postMessage('ready');
     </script>
     <span id="version">v6</span>
   </body>
